--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-15  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* Version 0.11.
+
+	* src/usb_prop.c (gnukStringSerial): Updated.
+
 2011-04-11  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* tool/dfuse.py (DFU_STM32.verify): support data size of non-1-KiB.
