--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-04-18  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* gnuk.svg: Updated.
+
 2011-04-15  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* Version 0.11.
