added missing entry of 0.11

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 Gnuk NEWS - User visible changes
 
+* Major changes in Gnuk 0.11
+
+  Released 2011-04-15, by NIIBE Yutaka
+
+This is bug fixes only release.
+
+
 * Major changes in Gnuk 0.10
 
   Released 2011-02-10, by NIIBE Yutaka
