--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-05-13  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* Version 0.12.
+
 2011-05-12  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/openpgp.c (cmd_pso, cmd_internal_authenticate)
