--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-07-04  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* ChibiOS_2.0.8/os/hal/platforms/STM32/adc_lld.h: Apply a patch of
+	ADC from the branch of ChibiOS_2.0.X.
+
 2011-06-15  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* Version 0.13.
