cosmetic fix of src/ac.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2011-11-01  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/ac.c (calc_md): Fix comparison.
+
 	* src/call-rsa.c (RSA_SIGNATURE_LENGTH): Use KEY_CONTENT_LEN.
 	(rsa_sign, rsa_decrypt): Likewise.
 	(modulus_calc): Don't assume it's 2048-bit.
