--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-11-24  Niibe Yutaka  <gniibe@fsij.org>
+
+	* Version 0.15.
+	* src/usb_desc.c (gnukStringSerial): Updated.
+
 2011-11-22  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/dfuse.py (DFU_STM32.download, DFU_STM32.verify): Support
